--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head><link rel="stylesheet" href="style.css"></head>
 <body>
 
   <div class="weather-app">
@@ -21,4 +22,5 @@
   </div>
 
 </body>
+<script src="script.js"></script>
 </html>
